# mersenne-prime-number-miller-rabin

./: Cargo.toml  README.md
src/: lib.rs  test.rs
