[package]
name = "mersenne-prime-number-miller-rabin"
version = "0.1.0"
edition = "2021"
description = "This package provides function to generate Mersenne number and test primality with Miller-Rabin Algorithme"
readme = "README.md"
repository = "https://github.com/CodeSourceT/mersenne-prime-number-miller-rabin"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"